--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-		<title>luct.tk - A URL shortener for Luctisity</title>
+		<title>luct.ml - A URL shortener for Luctisity</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="script.js"></script>
 	</head>
