--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<article style="display:flex; justify-content: center; flex-wrap:nowrap;">
 				<section style="margin-right:12px;">
 					<a href="http://luct.tk/#uGohoski"><img src="gohoski.png" width="100px" height="100px"><br>Gohoski</a><br>
-					<label>Main dev, code,<br> luct.tk domain owner</label>
+					<label>Main dev, code,<br> luct.ml domain owner</label>
 				</section>
 				<section>
 					<a href="http://luct.tk/#uLuniFoxo"><img src="lunifoxo.png" width="100px" height="100px"><br>LuniFoxo</a><br>
