--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 	<head>
 		<title>luct.ml - A URL shortener for Luctisity</title>
 		<link rel="stylesheet" href="style.css">
