--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 			<h2>Developed by:</h2>
 			<article style="display:flex; justify-content: center; flex-wrap:nowrap;">
 				<section style="margin-right:12px;">
-					<a href="http://luct.tk/#uGohoski"><img src="gohoski.png" width="100px" height="100px"><br>Gohoski</a><br>
+					<a href="http://host3958.itelit.pro/luctisity/users/Gohoski.php"><img src="gohoski.png" width="100px" height="100px"><br>Gohoski</a><br>
 					<label>Main dev, code,<br> luct.ml domain owner</label>
 				</section>
 				<section>
-					<a href="http://luct.tk/#uLuniFoxo"><img src="lunifoxo.png" width="100px" height="100px"><br>LuniFoxo</a><br>
+					<a href="http://host3958.itelit.pro/luctisity/users/LuniFoxo.php"><img src="lunifoxo.png" width="100px" height="100px"><br>LuniFoxo</a><br>
 					<label>Designer, code</label>
 				</section>
 			</article>
