--- a/badurl.html
+++ b/badurl.html
@@ -13,10 +13,12 @@
 			<h2 align="center">A URL shortener for Luctisity</h2>
 			<div class="container1" style="display:block; margin-left:auto; margin-right:auto;">
 				<br>
-				<img src="https://cdn.discordapp.com/emojis/796003596713590806.png?v=1" align="center"><br>
-				<h2 align="center">Hm.</h2>
-        <p align="center">Someone gave you a bad luct.ml link.<br>
-          However, you can go to <a href="host3958.itelit.pro">Luctisity</a> or <a href="luct.ml">the home page</a>.</p>
+				
+				
+        <p align="center"><img src="https://cdn.discordapp.com/emojis/796003596713590806.png?v=1" align="center"><br>
+				<h2>Hm.</h2><br>
+				Someone gave you a bad luct.ml link.<br>
+          However, you can go to <a href="http://host3958.itelit.pro">Luctisity</a> or <a href="index.html">the home page</a>.</p>
 				</div>
 		</main>
 		<footer><center>
