--- a/badurl.html
+++ b/badurl.html
@@ -15,10 +15,7 @@
 				<br>
 				
 				
-        <p align="center"><img src="https://cdn.discordapp.com/emojis/796003596713590806.png?v=1" align="center"><br>
-				<h2>Hm.</h2><br>
-				Someone gave you a bad luct.ml link.<br>
-          However, you can go to <a href="http://host3958.itelit.pro">Luctisity</a> or <a href="index.html">the home page</a>.</p>
+        <p align="center"><img src="https://cdn.discordapp.com/emojis/796003596713590806.png?v=1" align="center"><br><h2>Hm.</h2><br>Someone gave you a bad luct.ml link.<br>However, you can go to <a href="http://host3958.itelit.pro">Luctisity</a> or <a href="index.html">the home page</a>.</p>
 				</div>
 		</main>
 		<footer><center>
