--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					</center>
 				</div>
 				<h2 style="margin:6px;" align="center">So, what is this website?</h2>
-				<p align="center">luct.tk is a link shortener for the Luctisity/RSCServer website. You can use this tool to, for example, view a project on another computer, or view your profile instantly.</p>
+				<p align="center">luct.ml is a link shortener for the Luctisity/RSCServer website. You can use this tool to, for example, view a project on another computer, or view your profile instantly.</p>
 				<div class="container2" id="mail">
 					<center>
 						<img src="mail.png" width="300px">
